[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyphonic"
version = "1.1.1"
authors = [
  { name="Audio Fluff LLC", email="tom@audiofluff.com" }
]
description = "Make a VST plugin for your DAW using Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Topic :: Artistic Software',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Sound/Audio :: MIDI',
    'Topic :: Multimedia :: Sound/Audio :: Sound Synthesis',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3'
]

[project.urls]
Homepage = "https://github.com/audiofluff/pyphonic"
Issues = "https://github.com/audiofluff/pyphonic/issues"